--- a/.github/workflows/generate-ascii-artwork.yml
+++ b/.github/workflows/generate-ascii-artwork.yml
@@ -10,17 +10,8 @@ jobs:
     - name: Checkout Repo
       uses: actions/Checkout@v4
 
-    - name: Install Cowsay Program
-      run: sudo apt-get install cowsay -y
+    - name: List Repo Files
+      run: ls -ltra
 
-    - name: Execute Cowsay CMD
-      run: cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dragon.txt
-
-    - name: Test File Exists
-      run: grep -i "dragon" dragon.txt
-
-    - name: Read File
-      run: cat dragon.txt
-
-    - name: Checkout Repo Files
-      run: ls -lsar
+    - name: Executing Shell Script
+      run: ./ascii-script.sh
